# otto

./: .dockerignore  .gitignore  .otto.yml  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  baseline-test-results.txt  baseline-verification-results.txt  build.rs  install.sh
.cursor/rules/: configuration-format.mdc  development-patterns.mdc  executor-engine.mdc  feature-capabilities.mdc  otto-architecture.mdc
.github/workflows/: binary-release.yml  ci.yml  release-and-publish.yml  test-setup-otto.yml
docs/: action-key-restructuring-plan.md  advanced-ipc-deep-dive.md  capitalized-builtins-design.md  chumsky-design.md  clap-two-pass-parsing-design.md  cli-two-pass-parser.md  cli2-readme.md  data-passing-ergonomics-comparison.md  data-passing-executive-summary.md  data-passing-plan.md  directory-layout.md  docker-release-setup.md  file-based-management-plan.md  flag-implementation-plan.md  flag-support.md  foreach-builtin-flags-design.md  foreach-subtasks.md  github-workflows-implementation-plan.md  grammar.md  graph-after-relationship-visualization.md  graph-visualization-implementation.md  improved-data-passing-proposal.md  investigation-summary.md  ipc-methods-analysis.md  ipc-quick-reference.md  list-of-all-makefiles  makefile-converter-design.md  migration-guide.md  otto-interactive-tty-support.md  param-propagation-design.md  param-propagation-syntax.md  project-aware-stats-design.md  relative-symlinks-plan.md  schedulers.md  sqlite-implementation-plan.md  subtask-generation-design.md  task-subtask-notation-design.md  testability-plan.md  tui-implementation-plan.md  unimplemented-global-flags.md  (+2 more)
docs/architecture/: sqlite-integration.md
docs/commands/: clean.md  history.md  stats.md  upgrade.md
docs/design/: 2026-03-02-auto-pruning.md
docs/testing/: test-database-isolation.md
examples/auth-svc/: otto.yml
examples/basic-dependencies/: otto.yaml
examples/build-pipeline/: src.c
examples/build-test-deploy/: otto.yml
examples/complex-workflow/: otto.yml
examples/data-flow-bash/: otto.yml
examples/data-passing-demo/: README.md  otto.yml
examples/devs/: otto.yml
examples/diamond-dependencies/: otto.yml
examples/environment-variables/: otto.yml
examples/ex1/: otto.yml
examples/ex10/: otto.yml
examples/ex11/: otto.yml
examples/ex12/: Makefile  otto.yml  ottofile.yaml
examples/ex13/: otto.yml
examples/ex14/: otto.yml
examples/ex2/: .otto.yml
examples/ex3/: otto.yaml
examples/ex6/: otto.yml
examples/ex7/: otto.yml
examples/ex8/: README.md  config.json  otto.yml  process_config.yml
examples/ex9/: otto.yml  src.c
examples/file-dependencies/: README.md  config.json  otto.yml  process_config.yml
examples/flags/: flag_demo.yml
examples/foreach-glob/: otto.yml
examples/foreach-items/: otto.yml
examples/foreach-range/: otto.yml
examples/interactive-demo/: PROOF.md  README.md  otto.yml  test-interactive.sh
examples/media-planning-service/: Makefile  otto.yml
examples/parallel-tasks/: otto.yml
examples/pre-commit-hooks/: otto.yml
examples/subtask-targeting/: README.md  otto.yml
examples/tui-demo/: README.md  otto.yml
makefiles/auth-svc/: Makefile  otto.yml
makefiles/devs/: Makefile
makefiles/makefile-example/: Makefile
makefiles/media-planning-service/: otto.yml
makefiles/pre-commit-hooks/: otto.yml
prior-art/: doit  make
src/: app.rs  lib.rs  main.rs  utils.rs
src/cfg/: config.rs  env.rs  error.rs  mod.rs  otto.rs  param.rs  task.rs
src/cli/: builtins.rs  combinators.rs  completion.rs  demo.rs  error.rs  global_options_parser.rs  help.rs  macros.rs  (+5 more)
tests/: builtin_commands_test.rs  cleanup_integration_test.rs  examples_integration_test.rs  execution_context_integration_test.rs  executor_test.rs  file_dependencies_integration_test.rs  flag_integration_test.rs  help_behavior_test.rs  history_table_alignment_test.rs  makefile_converter_test.rs  ottofile_help_epilogue.rs  param_propagation_test.rs
(+65 files in other folders)
