[package]
name = "otto"
version = "0.1.2"
edition = "2021"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"

[lib]
name = "otto"
path = "src/lib.rs"

[[bin]]
name = "otto"
path = "src/main.rs"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
nom = "8.0"
levenshtein = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11"
dirs = "6.0"
expanduser = "1.2.2"
eyre = "0.6.12"
num_cpus = "1.17.0"
daggy = "0.9.0"
sha2 = "0.10.9"
hex = "0.4.3"
once_cell = "1.21.3"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.20"
regex = "1.11.1"
colored = "3.0.0"

[dev-dependencies]
tokio-test = "0.4"
assert_fs = "1.1"
predicates = "3.1"
filetime = "0.2"
assert_cmd = "2.0"
tempfile = "3.20"

[build-dependencies]
